--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -41,3 +41,6 @@ jobs:
           git diff-index --quiet HEAD || (git commit -m "Update data" && git push)
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Update Google sheet
+        run: |
+          python scripts/export_to_sheets.py
